# line-ai-bot-gcp

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
.github/workflows/: backend-pipeline.yml  cd.yml  ci.yml  proxy-cd.yml  proxy-ci.yml  proxy-pipeline.yml  terraform-check.yml
backend/: README.md  check.sh  pyproject.toml
backend/docs/: deploy-cli.md
backend/src/: main.py
backend/src/config/: gcp_logger.py
backend/tests/: conftest.py  test_main.py
backend/tests/config/: test_gcp_logger.py
docs/: deploy-cli.md  deploy-gha.md  deploy-terraform.md
proxy/: Dockerfile  README.md  go.mod  main.go  main_test.go
terraform-gcp/: .gar_policy.json  cloud_run.tf  cloud_run_proxy.tf  imports.txt  main.tf  outputs.tf  registry.tf  secrets.tf  terraform.tfvars.sample  variables.tf  workload_identity.tf
