[project]
name = "line-ai-bot-gcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.137.2",
    "line-bot-sdk>=3.23.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.410",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.18",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",
    "TC",
    "COM812",
    "G004",     # Logging statement uses f-string
    "INP001",   # an implicit namespace package
]
# RUF001, RUF002, RUF003 のすべてで「？」を無視する
allowed-confusables = ["（", "）", "：", "？", "！"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = [
    "S101",     # Use of assert
    "ANN201",   # Missing return type annotation for public function
    "PLR2004",  # Magic value used in comparison
    "ERA001",   # Found commented-out code
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=src --cov-branch --cov-report=term-missing --cov-report=html"
